Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70101

Drawing line with FlatCap style, Inconsistency in pixel draw if change direction of line

    XMLWordPrintable

Details

    • Linux/X11, Windows

    Description

      There is inconsistency in pixel drawing if a user draws a line left->right and right->left with CapStyle FlatCap. 

      As FlatCap does not cover the endpoints of the line, it works fine for direction left->right, top->bottom, bottom->top. But if user draws a line from right->left, even endpoints are drawn.

      I am attaching a sample project stating the problem, you can see that line left->right and right->left has a difference in pixel drawn. 

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes